--- a/Software/homing.cfg
+++ b/Software/homing.cfg
@@ -9,8 +9,8 @@ gcode:
     {% set y = 0 %}
     {% set z = 0 %}
     {% set a = 0 %}
-    {% set max_x = printer.configfile.config["stepper_x"]["position_max"]|float %}
-    {% set max_y = printer.configfile.config["stepper_y"]["position_max"]|float %}
+    {% set center_x = printer["gcode_macro _homing"].xh|float %}
+    {% set center_y = printer["gcode_macro _homing"].yh|float %}
 
     ##  Engage trigger variables according to the input
     {% if params.X is defined %}
@@ -28,18 +28,22 @@ gcode:
 
     ### Homing Actions
     # Mandatory clearance moves ------------------------------------------------------
-    G91                                                                    # Relative mode
+    G91                                                                        # Relative mode
     {% if x == 1 or y == 1 or a == 1 %}
         RESPOND TYPE=echo MSG='Nozzle Clearance...'
-        {% if "z" in printer.toolhead.homed_axes %}                        # If z is already homed
+        {% if "z" in printer.toolhead.homed_axes %}                            # If z is already homed
             {% set cur_z = printer.toolhead.position[2]|float %}
             {% if cur_z < 15.0 %}
-                G1 Z{ 15 - cur_z } F1500                                   # move Z up
+                G1 Z{ 15 - cur_z } F1500                                       # move Z up
             {% endif %}
-        {% else %}                                                         # but if x is not homed
-            SET_KINEMATIC_POSITION Z=0                                     # Set curent Z position as 0
-            G1 Z+15 F1500                                                  # move Z up
-            M84                                                            # remove the temporary postions
+        {% else %}                                                             # but if x is not homed
+            {% if  printer.tool_probe_endstop.active_tool_number|int == -1 %}
+                SET_KINEMATIC_POSITION Z=0                                     # Set curent Z position as 0
+                G1 Z+15 F3000                                                  # move Z up
+                {% if a != 1 %}
+                    M84                                                        # remove the temporary postions
+                {% endif %}
+            {% endif %}
         {% endif %}
             
         INITIALIZE_TOOLCHANGER
@@ -49,11 +53,11 @@ gcode:
         {% if "z" in printer.toolhead.homed_axes %}                            # If z is already homed
             {% set cur_z = printer.toolhead.position[2]|float %}
             {% if cur_z > 200.0 %}
-                G1 Z{ 200.0 - cur_z } F1500                                    # move Z down
+                G1 Z{ 200.0 - cur_z } F3000                                    # move Z down
             {% endif %}
         {% else %}
-            G28 Z                                                              # Home Z
-            G1 Z+15 F1500                                                      # Move Z up off the bed    
+            G28 Z
+            G1 Z+15 F3000                                                      # Move Z up off the bed
         {% endif %}
         G90                                                                    # Asolute mode
         
@@ -70,20 +74,23 @@ gcode:
     
         {% if z == 1 or a == 1 %}                                              # If "G28" or "G28 Z" is called
             RESPOND TYPE=echo MSG='Home Z...'
-            G0 X{max_x/2} Y{max_y/2} F9000                                     # Move the toolhead to the centre of the bed
+            G1 X{center_x} Y{center_y} F10000                                  # Move the toolhead to the centre of the bed
             G28 Z                                                              # Home Z
             _ADJUST_Z_HOME_FOR_TOOL_OFFSET                                     # Apply toolhead specific Z-offset
         {% endif %}
-        
         _APPLY_ACTIVE_TOOL_GCODE_OFFSETS                                       # Apply the X and Y toolhead offsets
-        M400 
+        M400
     {% else %}
-        SET_KINEMATIC_POSITION Z=0                                         # Set curent Z position as 0
-        G1 Z+15 F1500                                                      # move Z up
-        M84                                                                # remove the temporary postions
+        RESPOND TYPE=echo MSG='Home Z...'
+        {% set cur_z = printer.toolhead.position[2]|float %}
+        {% if cur_z < 15.0 %}
+            G1 Z{ 15 - cur_z } F1500                                       # move Z up
+        {% endif %}
+        {% if "xyz" in printer.toolhead.homed_axes %}
+            G90
+            G1 X{center_x} Y{center_y} F10000
+        {% endif %}
         G28 Z                                                              # Home Z
         _ADJUST_Z_HOME_FOR_TOOL_OFFSET                                     # Apply toolhead specific Z-offset
     {% endif %}
     
-    
-
