reorganise and add instructions

--- a/Software/Config Samples/T0-SB2209-Revo-LDO.cfg
+++ b/Software/Config Samples/T0-SB2209-Revo-LDO.cfg
@@ -1,15 +1,17 @@
 #####################################################################
 ## 	                MCU
 #####################################################################
-[mcu EBBCan1]
+[mcu EBBCan0]
 # ~/klippy-env/bin/python ~/klipper/scripts/canbus_query.py can0
-canbus_uuid: c0c02a1c29c9
+# python3 ~/katapult/scripts/flash_can.py -i can0 -q
+canbus_uuid: 1929c14acd7c
+# canbus_uuid: c0c02a1c29c9
 
 [adxl345]
-cs_pin: EBBCan1: PB12
-spi_software_sclk_pin: EBBCan1: PB10
-spi_software_mosi_pin: EBBCan1: PB11
-spi_software_miso_pin: EBBCan1: PB2
+cs_pin: EBBCan0: PB12
+spi_software_sclk_pin: EBBCan0: PB10
+spi_software_mosi_pin: EBBCan0: PB11
+spi_software_miso_pin: EBBCan0: PB2
 axes_map: x,y,z
 
 [resonance_tester]
@@ -19,17 +21,17 @@ accel_chip: adxl345
 #####################################################################
 ##	                 Temperature Monitoring
 #####################################################################
-[temperature_sensor T1]
+[temperature_sensor T0]
 sensor_type: Generic 3950
-sensor_pin: EBBCan1: PA2
+sensor_pin: EBBCan0: PA2
 
 #####################################################################
 ##                  Extruder motor
 #####################################################################
-[extruder1]
-step_pin: EBBCan1: PD0
-dir_pin: EBBCan1: PD1
-enable_pin: !EBBCan1: PD2
+[extruder]
+step_pin: EBBCan0: PD0
+dir_pin: EBBCan0: PD1
+enable_pin: !EBBCan0: PD2
 
 full_steps_per_rotation: 200  # Number of pulses required for a single motor revolution (1.8 degree motor: 200, 0.9 degree motor: 400)
 microsteps: 16
@@ -42,7 +44,7 @@ gear_ratio: 50:10
 rotation_distance: 21.6261675
 nozzle_diameter: 0.400
 filament_diameter: 1.750
-heater_pin: EBBCan1: PB13
+heater_pin: EBBCan0: PB13
 
 min_extrude_temp: 170                 # Minimum extrusion temperature
 pressure_advance: 0.035               # Propulsion pressure - try to keep pressure below 1.0
@@ -50,49 +52,48 @@ pressure_advance_smooth_time: 0.040   # Smooth advance time - default value is 0
 min_temp: 0                           #<-- important
 max_temp: 300                         #<-- important
 
-# Nozzle Temperature PID Calibration Command:  "PID_CALIBRATE HEATER=extruder TARGET=245"
-control = pid
-pid_kp = 35.688
-pid_ki = 4.032
-pid_kd = 78.961
+# # Nozzle Temperature PID Calibration Command:  "PID_CALIBRATE HEATER=extruder TARGET=245"
+# control = pid
+# pid_kp = 35.688
+# pid_ki = 4.032
+# pid_kd = 78.961
 
 max_extrude_cross_section: 5
 
 sensor_type: ATC Semitec 104NT-4-R025H42G
-sensor_pin: EBBCan1: PA3
+sensor_pin: EBBCan0: PA3
 
-
-[tmc2209 extruder1]
-uart_pin: EBBCan1: PA15
+[tmc2209 extruder]
+uart_pin: EBBCan0: PA15
 run_current: 0.550
 stealthchop_threshold: 999999
 
 #--------------------------------------------------------------------
-[verify_heater extruder1]   # Heating Block Temperature Tolerance Configuration
-max_error: 120              # maximum error
-check_gain_time:120         # tolerance time
-hysteresis: 50              # tolerance temperature
-heating_gain: 2             # Heating Gain
+[verify_heater extruder]   # Heating Block Temperature Tolerance Configuration
+max_error: 120             # maximum error
+check_gain_time:120        # tolerance time
+hysteresis: 50             # tolerance temperature
+heating_gain: 2            # Heating Gain
 
 #####################################################################
 #                  FAN
 #####################################################################
-[multi_fan T1_partfan]
-pin: EBBCan1: PA1
+[multi_fan T0_partfan]
+pin: EBBCan0: PA1
 kick_start_time: 0.5
 off_below: 0.10
 
 #--------------------------------------------------------------------
-[heater_fan T1_hotend_fan]
-pin: EBBCan1: PA0
-heater: extruder1
+[heater_fan T0_hotend_fan]
+pin: EBBCan0: PA0
+heater: extruder
 heater_temp: 50.0
 
 #####################################################################
 #                            RGB-LEDlight
 #####################################################################
-[neopixel T1_hotend_rgb]
-pin: EBBCan1:PD3
+[neopixel T0_hotend_rgb]
+pin: EBBCan0:PD3
 chain_count: 3               # Number of lamp beads
 color_order: GRB             # colour sequence
 initial_RED: 0.5             # Initial red brightness
@@ -103,43 +104,42 @@ initial_BLUE: 0.5            # Initial blue brightness
 #                        Homing and Gantry Adjustment
 #####################################################################
 ## NPN and PNP proximity switch types can be set by jumper, 24V
-[tool_probe T1]
-pin: EBBCan1:PB5
-tool:1
+[tool_probe T0]
+pin: EBBCan0:PB5
+tool:0
 x_offset: 0     			  # X-axis - sensor offset relative to the nozzle
 y_offset: 0     			  # Y-axis - sensor offset relative to the nozzle
-z_offset: 0                   # Z-axis - sensor offset relative to the nozzle
-                              # You'll need to manually calibrate the probe's Z offset by using "PROBE_CALIBRATE"                          
+# z_offset: 0                 # Z-axis - sensor offset relative to the nozzle 
+                              # You'll need to manually calibrate the probe's Z offset by using "PROBE_CALIBRATE"
 speed: 7.0                    # Levelling speed
-samples: 3                    # sampling frequency
+samples: 4                    # sampling frequency
 samples_result: median        # Value type (default median)
-sample_retract_dist: 2.0      # Levelling retraction distance
-samples_tolerance: 0.00250    # Sampling tolerance (note that too small a value may result in increased sampling)
+sample_retract_dist: 3.0      # Levelling retraction distance
+samples_tolerance: 0.00275    # Sampling tolerance (note that too small a value may result in increased sampling)
 samples_tolerance_retries: 10 # Number of out-of-tolerance retries
 
 ##-----------Reduce nozzle temperature for gantry levelling-------##
 activate_gcode:
-    _TAP_PROBE_ACTIVATE HEATER=extruder1
+    _TAP_PROBE_ACTIVATE HEATER=extruder
 
 #####################################################################
 #                        Toolhead Select Macro
 #####################################################################
-[gcode_macro T1]
+[gcode_macro T0]
 variable_color: ""
 gcode:
-    SELECT_TOOL T=1
-    _APPLY_GLOBAL_GCODE_OFFSETS
-
+    SELECT_TOOL T=0
+    
 #####################################################################
 #                        Toolhead parameters
 #####################################################################
-[tool T1]
-tool_number: 1
-extruder: extruder1
-fan: multi_fan T1_partfan
-gcode_x_offset: 0.090
-gcode_y_offset: 0.480
-# gcode_z_offset: 0.000
-params_park_x: 92.40
+[tool T0]
+tool_number: 0
+extruder: extruder
+fan: multi_fan T0_partfan
+gcode_x_offset: 0
+gcode_y_offset: 0
+gcode_z_offset: 0
+params_park_x: 14.00
 params_park_y: 84.00
 params_park_z: 250.0
