--- a/Software/Config Samples/macro-print.cfg
+++ b/Software/Config Samples/macro-print.cfg
@@ -15,80 +15,108 @@ gcode:
 #	                         Working
 ####################################################################################
 #--------------------------------------------------------------------
-[gcode_macro PRINT_START]
-#   Use PRINT_START for the slicer starting script - please customise for your slicer of choice
+[gcode_macro PRINT_START]                                   # Use PRINT_START for the slicer starting script - please customise for your slicer of choice
 gcode:
-    {% set center_x = printer["gcode_macro _homing"].xh|float %}
-    {% set center_y = printer["gcode_macro _homing"].yh|float %}
-
+    RESPOND TYPE=echo MSG='PRINT_START...'
+    ## Clear nozzle temps -------------------------------------------
+    {% set tools = printer.toolchanger.tool_numbers %}
+    {% for tool in tools %}
+        {% set para = "T"~tool~"_TEMP" %}
+        {% if para|string in params %}
+            {% set tooltemp = 'params.'~para %}
+            M104 T{tool} S0
+        {% endif %}
+    {% endfor %}
+    
+    ## Set right bed temp -------------------------------------------
+    SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={params.BED_TEMP}
+    
+    ## Switch to T0 and re-home -------------------------------------
+    M104 T0 S150
+    G28                                                     # Homing
     T0
     M109 S150                                               # and set the curent nozzle temp to match the bed before probing
-    G28                                                     # Homing Z
-    
-    RESPOND TYPE=echo MSG='{"Quad Gantry Level..."}'
+    G28                                                     # Homing
+
+    ## Quad gantry leveling -----------------------------------------
+    RESPOND TYPE=echo MSG='Quad Gantry Level...'
     QUAD_GANTRY_LEVEL                                       # Gantry levelling
-    G28 Z                                                   # Homing Z
+    G28                                                     # Homing
+
+    ## Bes Mesh -----------------------------------------------------
     BED_MESH_CLEAR                                          # Unloading net beds
-    # BED_MESH_PROFILE LOAD=full_bed                          # Loading the net bed
-    TOOL_BED_MESH_CALIBRATE                                 # BED_MESH_CALIBRATE, but with compensation for tool_z_offset
+    {% if printer['exclude_object'].objects == null %}
+        BED_MESH_PROFILE LOAD=full_bed                      # Loading the net bed
+    {% else %}
+        TOOL_BED_MESH_CALIBRATE                             # BED_MESH_CALIBRATE, but with compensation for tool_z_offset
+    {% endif %}
+
+    ## Skew ---------------------------------------------------------
     SET_SKEW CLEAR=1                                        # Clear skew compensation
     SKEW_PROFILE LOAD=calilantern_skew_profile              # Load skew compensation
 
-    RESPOND TYPE=echo MSG='{"Re-Home Z..."}'
-    G28 Z                                                   # Homing Z
+    ## Re-home -------------------------------------------------------
+    G28                                                     # Homing
 
-    {% if "T0_TEMP" in params %}                            # Check if T0 is used
-        M104 T0 S{ params.T0_TEMP }                         # target print temp
-    {% endif %}
-    {% if "T1_TEMP" in params %}
-        M104 T1 S{ params.T1_TEMP }
-    {% endif %}
-    {% if "T2_TEMP" in params %}
-        M104 T2 S{ params.T2_TEMP }
-    {% endif %}
-    {% if "T3_TEMP" in params %}
-        M104 T3 S{ params.T3_TEMP }
-    {% endif %}
+    ## Set nozzle temps ----------------------------------------------
+    {% set tools = printer.toolchanger.tool_numbers %}
+    {% for tool in tools %}
+        {% set para = "T"~tool~"_TEMP" %}
+        {% if para|string in params %}
+            {% set tooltemp = 'params.'~para %}
+            M104 T{tool} S{tooltemp}
+        {% else %}
+            M104 T{tool} S0
+        {% endif %}
+    {% endfor %}
 
-    # M109 S{ params.TOOL_TEMP }    # For Single toolhead only
-    # Smart_Park                    # For Single toolhead only
-    # LINE_PURGE                    # For Single toolhead only
+    {% for tool in tools %}
+        {% set para = "T"~tool~"_TEMP" %}
+        {% if para|string in params %}
+            {% set tooltemp = 'params.'~para %}
+            M109 T{tool} S{tooltemp}
+        {% endif %}
+    {% endfor %}
     
-    RESPOND TYPE=echo MSG='{"Print Start..."}'
+    ## Move nozzle to corner ----------------------------------------
+    G1 X15 F9000
+    RESPOND TYPE=echo MSG='Printing...'
 
 #--------------------------------------------------------------------
-[gcode_macro PRINT_END]                    # Set PRINT_END as the end-of-print macro to customise the after-print action.
+[gcode_macro PRINT_END]                                     # Set PRINT_END as the end-of-print macro to customise the after-print action.
 gcode:
     M400                                                    # finish off and clear buffer
+    RESPOND TYPE=echo MSG='PRINT_END...'
+    
     G91                                                     # relative position
     G0 Z1.00 F9000                                          # Remove nozzle
     G90
-
-    {% if "T0_TEMP" in params %}
-        T0
-        _PRINT_END_FIL
-    {% endif %}
-    {% if "T1_TEMP" in params %}
-        T1
-        _PRINT_END_FIL
-    {% endif %}
-    {% if "T2_TEMP" in params %}
-        T2
-        _PRINT_END_FIL
-    {% endif %}
-    {% if "T3_TEMP" in params %}
-        T3
-        _PRINT_END_FIL
-    {% endif %}
     
+    {% set tools = printer.toolchanger.tool_numbers %}
+    {% for tool in tools|reverse %}
+        {% set para = "T"~tool~"_TEMP" %}
+        {% if para|string in params %}
+            T{tool}
+            {% if printer.extruder.temperature > params.TOOL_TEMP - 5 %}
+                G10                                         # Retracting the filament
+                G92 E0                                      # Zeroing the extruder
+        	{% endif %}
+        {% endif %}
+    {% endfor %}
+    
+    M400
     TURN_OFF_HEATERS                                        # Close the hot end
     M107                                                    # Switch off the fan.
-    
-    T0                                                     # absolute positioning
-    G0 Z250 F9000                                           # Place toolhead centre-340-250mm
-    
     BED_MESH_CLEAR                                          # Unloading net beds
     SET_SKEW CLEAR=1                                        # Clear skew compensation
+    
+    {% if printer.toolhead.position[2]|float < 250 %}
+        G0 Z250 F9000
+    {% else %}
+        G0 X340 Y340 F9000
+    {% endif %}
+    
+    RESPOND TYPE=echo MSG='Finished...'
 
 #--------------------------------------------------------------------
 [gcode_macro PAUSE]
