--- a/Software/Functions and Marcros/homing.cfg
+++ b/Software/Functions and Marcros/homing.cfg
@@ -9,35 +9,38 @@ gcode:
     {% set y = 0 %}
     {% set z = 0 %}
     {% set a = 0 %}
+
+    ## Set up variables
     {% set center_x = printer["gcode_macro _homing"].xh|float %}
     {% set center_y = printer["gcode_macro _homing"].yh|float %}
+    {% set cur_z = printer.toolhead.position[2]|float %}
 
     ##  Engage trigger variables according to the input
     {% if params.X is defined %}
-        {% set x = 1 %}                                                    # for x home
+        {% set x = 1 %}                                                        # for x home
     {% endif %}
     {% if params.Y is defined %}
-        {% set y = 1 %}                                                    # for y home
+        {% set y = 1 %}                                                        # for y home
     {% endif %}
     {% if params.Z is defined %}
-        {% set z = 1 %}                                                    # for z home
+        {% set z = 1 %}                                                        # for z home
     {% endif %}
     {% if (x == 0 and y == 0 and z == 0) %}
-        {% set a = 1 %}                                                    # for x home
+        {% set a = 1 %}                                                        # for home all
     {% endif %}
 
     ### Homing Actions
     # Mandatory clearance moves ------------------------------------------------------
-    G91                                                                        # Relative mode
     {% if x == 1 or y == 1 or a == 1 %}
-        RESPOND TYPE=echo MSG='Nozzle Clearance...'
+        G91                                                                    # Relative mode
         {% if "z" in printer.toolhead.homed_axes %}                            # If z is already homed
-            {% set cur_z = printer.toolhead.position[2]|float %}
             {% if cur_z < 15.0 %}
+                RESPOND TYPE=echo MSG='Nozzle Clearance...'
                 G1 Z{ 15 - cur_z } F1500                                       # move Z up
             {% endif %}
         {% else %}                                                             # but if x is not homed
             {% if  printer.tool_probe_endstop.active_tool_number|int == -1 %}
+                RESPOND TYPE=echo MSG='Nozzle Clearance...'
                 SET_KINEMATIC_POSITION Z=0                                     # Set curent Z position as 0
                 G1 Z+15 F3000                                                  # move Z up
                 {% if a != 1 %}
@@ -49,19 +52,19 @@ gcode:
         INITIALIZE_TOOLCHANGER
         STOP_TOOL_PROBE_CRASH_DETECTION
         
-        RESPOND TYPE=echo MSG='Umbilical Clearance...'
         {% if "z" in printer.toolhead.homed_axes %}                            # If z is already homed
-            {% set cur_z = printer.toolhead.position[2]|float %}
             {% if cur_z > 200.0 %}
+                RESPOND TYPE=echo MSG='Umbilical Clearance...'
                 G1 Z{ 200.0 - cur_z } F3000                                    # move Z down
             {% endif %}
         {% else %}
-            G28 Z
+            RESPOND TYPE=echo MSG='Umbilical Clearance...'
+            G28 Z                                                              # temporary home z
             G1 Z+15 F3000                                                      # Move Z up off the bed
         {% endif %}
         G90                                                                    # Asolute mode
         
-        # Specific opition moves ------------------------------------------------------------
+    # Specific moves ------------------------------------------------------------------
         {% if x == 1 or y == 1 or a == 1 %}                                    # If X or Y is called
             RESPOND TYPE=echo MSG='Home Y...'
             G28 Y                                                              # Home Y
@@ -80,17 +83,20 @@ gcode:
         {% endif %}
         _APPLY_ACTIVE_TOOL_GCODE_OFFSETS                                       # Apply the X and Y toolhead offsets
         M400
+    
     {% else %}
         RESPOND TYPE=echo MSG='Home Z...'
-        {% set cur_z = printer.toolhead.position[2]|float %}
-        {% if cur_z < 15.0 %}
-            G1 Z{ 15 - cur_z } F1500                                       # move Z up
-        {% endif %}
-        {% if "xyz" in printer.toolhead.homed_axes %}
+        {% if "xyz" in printer.toolhead.homed_axes %}                          # if printer is already homed
+            G91
+            {% if cur_z < 15.0 %}
+                RESPOND TYPE=echo MSG='Nozzle Clearance...'
+                G1 Z{ 15 - cur_z } F1500                                       # move Z up to 15mm
+            {% endif %}
             G90
-            G1 X{center_x} Y{center_y} F10000
+            G1 X{center_x} Y{center_y} F10000                                  # Move to centre of the bed
         {% endif %}
-        G28 Z                                                              # Home Z
-        _ADJUST_Z_HOME_FOR_TOOL_OFFSET                                     # Apply toolhead specific Z-offset
+        
+        G28 Z                                                                  # Home Z
+        _ADJUST_Z_HOME_FOR_TOOL_OFFSET                                         # Apply toolhead specific Z-offset
     {% endif %}
     
