Add Nudge and probe test

--- a/Software/Functions and Marcros/calibrate-offsets.cfg
+++ b/Software/Functions and Marcros/calibrate-offsets.cfg
@@ -1,21 +1,20 @@
-
+#####################################################################
+#               tools_calibrate Configuration
+#####################################################################
 [tools_calibrate]
 pin: PG10
-travel_speed: 20
-spread: 7
-lower_z: 1.0
-# The speed (in mm/sec) to move tools down onto the probe
-speed: 1.5
-# The speed (in mm/sec) to retract between probes
-lift_speed: 4
-final_lift_z: 3
+travel_speed: 20             # mm to travel sideways for XY probing
+spread: 7                    # mm to travel down from top for XY probing
+lower_z: 1.0                 
+speed: 1.5                   # The speed (in mm/sec) to move tools down onto the probe
+lift_speed: 4                # The speed (in mm/sec) to retract between probes
+final_lift_z: 3              # Z Lift after probing done, should be greater than any Z variance between tools
 samples:5
-samples_result: median # median, average
+samples_result: median       # median, average
 sample_retract_dist:1
-samples_tolerance:0.01
-samples_tolerance_retries:2
-# Decrease -> higher nozzle
-trigger_to_bottom_z: 1.655
+samples_tolerance:0.01       # UPDATE THIS WITH YOUR PRINTER
+samples_tolerance_retries:10
+trigger_to_bottom_z: 1.820   # Decrease -> higher nozzle
 
 #####################################################################
 #                        Hidden
@@ -23,13 +22,14 @@ trigger_to_bottom_z: 1.655
 [gcode_macro _CALIBRATE_MOVE_OVER_PROBE]
 gcode:
     BED_MESH_CLEAR
-    G0 Z60 F9000
-    G0 X241.44 Y329.99 F9000
+    G0 Z60 F9000                # UPDATE THIS WITH YOUR POSITION. Make sure that the nozzle is not touching the probe.
+    G0 X241.76 Y330.28 F9000    # UPDATE THIS WITH YOUR POSITION
 
 #####################################################################
 #                        Working
 #####################################################################
 [gcode_macro CALIBRATE_OFFSETS]
+description: Tool offsetS calibration
 gcode:
     {% set tools = printer.toolchanger.tool_numbers %}
     {% set names = printer.toolchanger.tool_names %}
@@ -38,36 +38,28 @@ gcode:
         # Tool 0
         SELECT_TOOL T={tools[0]}  RESTORE_AXIS=XYZ
         STOP_TOOL_PROBE_CRASH_DETECTION
-        _CALIBRATE_MOVE_OVER_PROBE    
-        M104 S150
-        TEMPERATURE_WAIT SENSOR='{printer.toolhead.extruder}' MINIMUM=150
+        _CALIBRATE_MOVE_OVER_PROBE
         TOOL_LOCATE_SENSOR
         TOOL_CALIBRATE_PROBE_OFFSET PROBE="tool_probe T0"
-        M104 S0
     
         {% if params.TOOL != null%}
             RESPOND TYPE=echo MSG='Calibrate T{params.TOOL}...'
             SELECT_TOOL T={params.TOOL}  RESTORE_AXIS=Z
             STOP_TOOL_PROBE_CRASH_DETECTION
-            M104 S150 T{params.TOOL}
             _CALIBRATE_MOVE_OVER_PROBE    
             TOOL_CALIBRATE_TOOL_OFFSET
             TOOL_CALIBRATE_PROBE_OFFSET PROBE="tool_probe T{params.TOOL}"
-            M104 S0
         {% else %}
             RESPOND TYPE=echo MSG='Calibrate all tools...'
             {% for tool in tools[1:] %}
                 SELECT_TOOL T={tool}  RESTORE_AXIS=Z
                 STOP_TOOL_PROBE_CRASH_DETECTION
-                M104 S150 T{tool}
                 _CALIBRATE_MOVE_OVER_PROBE
-                TEMPERATURE_WAIT SENSOR='{printer[names[loop.index]].extruder}' MINIMUM=150
                 TOOL_CALIBRATE_TOOL_OFFSET
                 TOOL_CALIBRATE_SAVE_TOOL_OFFSET SECTION="{names[loop.index]}" ATTRIBUTE=gcode_x_offset VALUE="{% raw %}{x:0.6f}{% endraw %}"
                 TOOL_CALIBRATE_SAVE_TOOL_OFFSET SECTION="{names[loop.index]}" ATTRIBUTE=gcode_y_offset VALUE="{% raw %}{y:0.6f}{% endraw %}"
                 TOOL_CALIBRATE_SAVE_TOOL_OFFSET SECTION="{names[loop.index]}" ATTRIBUTE=gcode_z_offset VALUE="{% raw %}{z:0.6f}{% endraw %}"
                 TOOL_CALIBRATE_PROBE_OFFSET PROBE="tool_probe T{tool}"
-                M104 S0
             {% endfor %}
         {% endif %}
         
@@ -86,12 +78,18 @@ gcode:
     
 #--------------------------------------------------------------------
 [gcode_macro CALIBRATE_NPO]
-description: CALIBRATE_NOZZLE_PROBE_OFFSET
+description: Nozzle probe offset calibration
 gcode:
-    STOP_TOOL_PROBE_CRASH_DETECTION
-    _CALIBRATE_MOVE_OVER_PROBE
-    M104 S150
-    TEMPERATURE_WAIT SENSOR='{printer.toolhead.extruder}' MINIMUM=150
-    TOOL_LOCATE_SENSOR
-    TOOL_CALIBRATE_PROBE_OFFSET PROBE="tool_probe T0"
-    M104 S0
+    {% if printer['quad_gantry_level'].applied == True and "xyz" in printer.toolhead.homed_axes %}
+        STOP_TOOL_PROBE_CRASH_DETECTION
+        _CALIBRATE_MOVE_OVER_PROBE
+        TOOL_LOCATE_SENSOR
+        TOOL_CALIBRATE_PROBE_OFFSET PROBE="tool_probe T{printer.toolchanger.tool_number}"
+    {% else %}
+        {% if printer['quad_gantry_level'].applied == False %}
+            RESPOND TYPE=echo MSG='Gantry is not LEVELED...'
+        {% endif %}
+        {% if "xyz" not in printer.toolhead.homed_axes %}
+            RESPOND TYPE=echo MSG='Printer is not HOMED...'
+        {% endif %}
+    {% endif %}
